@@ -5,7 +5,6 @@ import com.gobongbob.festamate.global.util.JwtAuthenticationEntryPoint;
 import com.gobongbob.festamate.global.util.TokenAuthenticationFilter;
 import com.gobongbob.festamate.global.util.TokenProvider;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.boot.autoconfigure.security.servlet.PathRequest;
@@ -46,7 +45,8 @@ public class SecurityConfig {
                             configuration.setAllowedMethods(
                                     List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
                             configuration.setAllowCredentials(true);
-                            configuration.setAllowedHeaders(Collections.singletonList("*"));
+                            configuration.setAllowedHeaders(
+                                    List.of("Authorization", "Content-Type"));
                             configuration.setMaxAge(3600L);
                             configuration.setExposedHeaders(List.of("Authorization"));
                             return configuration;
